--- a/labsol1.ipynb
+++ b/labsol1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -26,7 +26,42 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31musage: jupyter.py [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "\u001b[1;31m                  [--paths] [--json] [--debug]\n",
+      "\u001b[1;31m                  [subcommand]\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter: Interactive Computing\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mpositional arguments:\n",
+      "\u001b[1;31m  subcommand     the subcommand to launch\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31moptional arguments:\n",
+      "\u001b[1;31m  -h, --help     show this help message and exit\n",
+      "\u001b[1;31m  --version      show the versions of core jupyter packages and exit\n",
+      "\u001b[1;31m  --config-dir   show Jupyter config dir\n",
+      "\u001b[1;31m  --data-dir     show Jupyter data dir\n",
+      "\u001b[1;31m  --runtime-dir  show Jupyter runtime dir\n",
+      "\u001b[1;31m  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "\u001b[1;31m                 format.\n",
+      "\u001b[1;31m  --json         output paths as machine-readable json\n",
+      "\u001b[1;31m  --debug        output debug information about paths\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mAvailable subcommands:\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter command `jupyter-notebook` not found. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -44,7 +79,42 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31musage: jupyter.py [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "\u001b[1;31m                  [--paths] [--json] [--debug]\n",
+      "\u001b[1;31m                  [subcommand]\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter: Interactive Computing\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mpositional arguments:\n",
+      "\u001b[1;31m  subcommand     the subcommand to launch\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31moptional arguments:\n",
+      "\u001b[1;31m  -h, --help     show this help message and exit\n",
+      "\u001b[1;31m  --version      show the versions of core jupyter packages and exit\n",
+      "\u001b[1;31m  --config-dir   show Jupyter config dir\n",
+      "\u001b[1;31m  --data-dir     show Jupyter data dir\n",
+      "\u001b[1;31m  --runtime-dir  show Jupyter runtime dir\n",
+      "\u001b[1;31m  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "\u001b[1;31m                 format.\n",
+      "\u001b[1;31m  --json         output paths as machine-readable json\n",
+      "\u001b[1;31m  --debug        output debug information about paths\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mAvailable subcommands:\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter command `jupyter-notebook` not found. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib\n",
@@ -188,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, May 24 2022, 21:13:54) \n[Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.9.13"
   },
   "name": "labsol1.ipynb",
   "vscode": {
